Refactor CORS policy to use configurable properties for allowed origins, methods, headers, and exposed headers