@@ -1,5 +1,6 @@
 package bitbridge.authentication.config.policy;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
@@ -10,12 +11,23 @@ import java.util.List;
 
 @Component
 public class CorsPolicy {
-    public CorsConfigurationSource createCorsConfigurationSource(String[] allowedOrigins) {
+    @Value("${app.cors.allowed-origins}")
+    private String[] allowedOrigins;
+
+    @Value("${app.cors.allowed-methods:GET,POST,PUT,PATCH,DELETE,OPTIONS}")
+    private String[] allowedMethods;
+
+    @Value("${app.cors.allowed-headers:authorization,content-type,x-auth-token}")
+    private String[] allowedHeaders;
+
+    @Value("${app.cors.exposed-headers}")
+    private String[] exposedHeaders;
+    public CorsConfigurationSource createCorsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-        config.setExposedHeaders(List.of("x-auth-token"));
+        config.setAllowedMethods(Arrays.asList(allowedMethods));
+        config.setAllowedHeaders(Arrays.asList(allowedHeaders));
+        config.setExposedHeaders(List.of(exposedHeaders));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
